--- a/src/main/webapp/WEB-INF/pages/users/new.html
+++ b/src/main/webapp/WEB-INF/pages/users/new.html
@@ -15,6 +15,10 @@
         <input type="text" th:field="*{name}" id="name" placeholder="name"><br>
         <label for="surname">Фамилия</label> <br>
         <input type="text" th:field="*{surname}" id="surname" placeholder="surname"><br>
+        <label for="age">возвраст</label> <br>
+        <input type="text" th:field="*{age}" id="age"><br>
+        <label for="num">номер телефона</label> <br>
+        <input type="text" th:field="*{number}" id="num"><br>
         <label for="email">Почта</label> <br>
         <input type="text" th:field="*{email}" id="email" placeholder="e-mail"> <br>
         <br>
